--- a/InventoryManagement/Views/Orders/Index.cshtml
+++ b/InventoryManagement/Views/Orders/Index.cshtml
@@ -15,7 +15,7 @@
             <thead class="text-center">
                 <tr>
                     <th class="text-white bg-primary">Order ID</th>
-                    <th class="text-white bg-primary">Customer</th>
+                    <th class="text-white bg-primary">Store</th>
                     <th class="text-white bg-primary">Date</th>
                     <th class="text-white bg-primary">Total</th>
                     <th class="text-white bg-primary">Actions</th>
